terraform-aks-azure/kubernetes/mantis_ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: mantis-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: nginx
    #nginx.ingress.kubernetes.io/ssl-redirect: "false"
    #nginx.ingress.kubernetes.io/use-regex: "true"
    #nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - host: "www.mantis-test.pp.ua"
    http:
      paths:
      - path: /
        backend:
          serviceName: mantisbt
          servicePort: 80
